--- a/templates/detail.html
+++ b/templates/detail.html
@@ -50,13 +50,13 @@
         var data = {}
         data.id = $("#hidId").val();
         data.name = $("#txtName").val();
+        data.dir = $("#txtDir").val();
         data.prompts = jsonArray;
         const response = await fetch('/doSave', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data) // 將陣列轉換為 JSON 字串
         });
-
 
       });
 
@@ -213,13 +213,22 @@
 <body>
   <div class="container mt-5 mb-5">
     <div class="card text-center mb-4">
-      <div class="card-header bg-primary text-white">
-        <h5 class="my-1">名稱</h5>
+      <input type="hidden" id="hidId" value="{{jsondata.id}}" />
+      <div class="row mb-3 me-2">
+        <div class="col-md-2 d-flex align-items-center justify-content-start">
+          <label>名稱</label>
+        </div>
+        <div class="col-md-10">
+          <input type="text" class="form-control" id="txtName" placeholder="請輸入名稱" value="{{jsondata.name}}" />
+        </div>
       </div>
-      <div class="text-white py-2 px-3">
-        <input type="text" class="form-control text-center" id="txtName" placeholder="請輸入名稱"
-          value="{{jsondata.name}}" />
-        <input type="hidden" id="hidId" value="{{jsondata.id}}" />
+      <div class="row mb-3 me-2">
+        <div class="col-md-2 d-flex align-items-center justify-content-start">
+          <label>路徑</label>
+        </div>
+        <div class="col-md-10">
+          <input type="text" class="form-control" id="txtDir" placeholder="路徑" value="{{jsondata.dir}}" />
+        </div>
       </div>
     </div>
 
