--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,13 @@
     $(document).ready(function () {
       var data = jsondata_from_server;
 
+      $('#btnNew').click(function () {
+        if (true)
+          return false;
+
+        location.href = "/detail?id=''";
+      });
+
       // 初始化 DataTable
       var dataTable = $('#table1').DataTable({
         data: data,
@@ -266,7 +273,9 @@
     <main>
       <div class="card p-4 shadow-lg mb-4">
         <h2 class="card-title h4 mb-3">自動化提交工具</h2>
-
+        <div class="mb-3" style="display: flex;justify-content: flex-end;">
+          <button class="btn btn-success" id="btnNew">新增</button>
+        </div>
         <div class="table-responsive">
           <table id="table1" class="table table-striped table-bordered" style="width:100%">
             <thead>
