--- a/templates/detail.html
+++ b/templates/detail.html
@@ -49,6 +49,86 @@
         });
       }
 
+      var jsondata = jsondata_from_server.prompts
+
+      // 初始化 DataTable
+      var dataTable = $('#table2').DataTable({
+        data: jsondata,
+        columns: [
+          { // 序號
+            data: null, orderable: false,
+            render: function (data, type, row, meta) {
+              return meta.row + 1;
+            },
+            className: "text-center"
+          },
+          { // 內容
+            data: "content", orderable: false,
+            render: function (data, type, row) {
+              const nameTextarea = $('<textarea></textarea>').addClass('form-control').attr('name', 'content').attr('rows', 3);
+              return $("<div/>").append(nameTextarea.text(data)).html();
+            }
+          },
+          {
+            data: null, orderable: false,
+            render: function (data, type, row) {
+              return $("<div/>")
+                .append($("<button/>", { class: "btn btn-info btnAdjust btn-sm mb-1 w-100", text: "展開" }))
+                .append($("<button/>", { class: "btn btn-secondary btnShrink btn-sm mb-1 w-100", text: "縮回" }))
+                .append($("<button/>", { class: "btn btn-danger btnDel btn-sm mb-1 w-100", text: "刪除" })).html();
+            }
+          }
+        ],
+        language: {
+          "sProcessing": "處理中...",
+          "sLengthMenu": "顯示 _MENU_ 筆結果",
+          "sZeroRecords": "沒有符合的結果",
+          "sInfo": "顯示第 _START_ 至 _END_ 筆結果，共 _TOTAL_ 筆",
+          "sInfoEmpty": "顯示第 0 至 0 筆結果，共 0 筆",
+          "sInfoFiltered": "(從 _MAX_ 筆結果中過濾)",
+          "sInfoPostFix": "",
+          "sSearch": "搜尋:",
+          "sUrl": "",
+          "oPaginate": {
+            "sFirst": "第一頁",
+            "sPrevious": "上一頁",
+            "sNext": "下一頁",
+            "sLast": "最後一頁"
+          }
+        },
+        pageLength: 10,
+        order: [[0, 'asc']],
+        dom: 't<"text-right"i><"text-center"p>', // 't' 代表 table, 'i' 代表 info, 'p' 代表 pagination
+        searching: false,
+        paging: false,
+        info: true,
+        lengthMenu: false,
+        autoWidth: true,
+        responsive: true,
+      });
+
+
+      //按鈕事件
+      $("#table2").on('click', ".btnAdjust", function (e) {
+        const textarea = $(this).closest('tr').find('textarea');
+        if (textarea.length) {
+          textarea.css('height', 'auto').css('height', textarea[0].scrollHeight + 'px');
+        }
+        // adjustTextareaHeight();
+      }).on('click', ".btnShrink", function (e) {
+        const textarea = $(this).closest('tr').find('textarea');
+        if (textarea.length) {
+          textarea.css('height', '').attr('rows', 3);
+        }
+      }).on('click', ".btnDel", function (e) {
+        // 使用 $(this) 取得被點擊的按鈕
+        $(this).closest('tr').remove();
+        $('#table2 tbody tr').each(function (index) {
+          $(this).find('td:first').text(index + 1);
+        });
+      });
+
+
       $('#btnSave').click(async function () {
         var jsonArray = []
         $("#tablebody tr").each(function () {
@@ -357,6 +437,28 @@
               </tr>
             </thead>
             <tbody id="tablebody">
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="card mb-4">
+      <div class="card-body p-0">
+        <div class="table-responsive">
+          <table id="table2" class="table table-striped table-bordered mb-0">
+            <thead>
+              <tr>
+                <th class="text-center" style="width: 50px;">序號</th>
+                <th class="text-center" style="width: 75%;">內容</th>
+                <th class="text-center" style="width: 180px;">
+                  <!-- <button class="btn btn-primary btn-sm" id="btnAdd">新增</button>
+                  <button class="btn btn-success btn-sm" id="btnFileUpdate">檔案上傳</button>
+                  <input type="file" id="fileInput" style="display: none;"> -->
+                </th>
+              </tr>
+            </thead>
+            <tbody>
             </tbody>
           </table>
         </div>
