--- a/templates/detail.html
+++ b/templates/detail.html
@@ -478,7 +478,7 @@
       </div>
     </div>
 
-    <div class="card mb-4">
+    <div class="card mb-4" style="display: none;">
       <div class="card-body p-0">
         <div class="table-responsive">
           <table id="table2" class="table table-striped table-bordered mb-0">
